--- a/Exercise 2/index.css
+++ b/Exercise 2/index.css
@@ -9,6 +9,11 @@
     margin: 1rem;
     
 }
+#current
+{
+    background-color: black;
+    color: white;
+}
 .nav{
     border: 1px solid black;
     padding: 1rem;
