--- a/css_selectors_combinators_exercise/css/index.css
+++ b/css_selectors_combinators_exercise/css/index.css
@@ -34,4 +34,29 @@ section
     border: 1px solid black;
     border-radius: 0 0 8px 8px;
 }
+.special2 {
+    background-color: steelblue;
+    border: 1px solid black;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .special2 > * {
+    background-color: aliceblue;
+    padding: 16px;
+    margin: 0;
+  }
+  
+  .special2 > * + * {
+    margin-top: 20px;
+  }
+  
+.mycheckbox:checked + span {
+    background-color: lightblue;
+  }
 
+::selection
+{
+    background-color: yellow;
+}
+  
