terminar ejercicio combinator

--- a/css_selectors_combinators_exercise/css/index.css
+++ b/css_selectors_combinators_exercise/css/index.css
@@ -1,62 +1,65 @@
-h1,h2{
-color: blue;
+h1,
+h2 {
+  color: blue;
 }
-section
-{
-    margin: 16px;
+section {
+  margin: 16px;
 }
-.special p 
-{
-    font-weight: bold;
+.special p {
+  font-weight: bold;
 }
-.special > p 
-{
-    color: darkred;
+.special > p {
+  color: darkred;
 }
-.special > p{
-
-    margin: 0;
-    padding: 16px;
-    border: 1px solid black;
+.special > p {
+  margin: 0;
+  padding: 16px;
+  border: 1px solid black;
 }
-.special > p:first-child
-{
-    border-radius: 8px 8px 0 0;
+.special > p:first-child {
+  border-radius: 8px 8px 0 0;
 }
-.special > p:last-child
-{
-    border-radius: 8px 8px 8px 8px;
+.special > p:last-child {
+  border-radius: 8px 8px 8px 8px;
 }
 
-.special >div{
-    margin: 0;
-    padding: 16px;
-    border: 1px solid black;
-    border-radius: 0 0 8px 8px;
+.special > div {
+  margin: 0;
+  padding: 16px;
+  border: 1px solid black;
+  border-radius: 0 0 8px 8px;
 }
 .special2 {
-    background-color: steelblue;
-    border: 1px solid black;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .special2 > * {
-    background-color: aliceblue;
-    padding: 16px;
-    margin: 0;
-  }
-  
-  .special2 > * + * {
-    margin-top: 20px;
-  }
-  
-.mycheckbox:checked + span {
-    background-color: lightblue;
-  }
-
-::selection
-{
-    background-color: yellow;
+  background-color: steelblue;
+  border: 1px solid black;
+  margin: 0;
+  padding: 0;
 }
-  
+
+.special2 > * {
+  background-color: aliceblue;
+  padding: 16px;
+  margin: 0;
+}
+
+.special2 > * + * {
+  margin-top: 20px;
+}
+
+.mycheckbox:checked + span {
+  background-color: lightblue;
+}
+
+.mycheckbox:checked + span::before {
+  content: "=========>";
+}
+.mycheckbox:checked + span::after {
+  content: "<=========";
+}
+
+.mycheckbox:checked ~ span {
+  font-weight: bold;
+}
+::selection {
+  background-color: yellow;
+}
