--- a/box-model & float/css/exercise1.css
+++ b/box-model & float/css/exercise1.css
@@ -6,15 +6,16 @@ body {
 }
 nav {
   background-color: lightgrey;
+  overflow-y: auto;
 }
 nav > a {
-  display: inline-block;
   margin: 1em;
   padding: 1em;
   border: 1px solid black;
   background-color: steelblue;
-  width: calc(25% - 4em - 5px);
+  width: calc(25% - 4em - 2px);
   text-align: center;
+  float: left;
 }
 
 .lefthigh {
