--- a/Js course/calculator-exercise-result-master/css/calculator.css
+++ b/Js course/calculator-exercise-result-master/css/calculator.css
@@ -51,7 +51,7 @@ body {
 
 #equals {
   grid-column: 4;
-  grid-row: 3 / span 3;
+  grid-row: 3 /  6;
   background-color: tomato;
 }
 #equals:hover {
