--- a/2022-2023_front-end_exam_resources/src/css/index.css
+++ b/2022-2023_front-end_exam_resources/src/css/index.css
@@ -37,13 +37,9 @@ nav > a:first-child {
 }
 
 article {
-  border: 1px solid transparent;
-  margin: 1rem 1rem 1rem 1rem;
+  box-shadow: 0px 0px 6px black;
   position: relative;
-  width: calc(100% - 2rem);
-  height: calc(100%-2rem);
-  border-radius: 0 0 15px 15px;
-  box-shadow: 0 5px 5px 1px var(--mu-dark);
+  margin-bottom: 10px;
 }
 article:first-child {
   margin-top: 0px;
@@ -56,7 +52,6 @@ article:last-child {
 .imagenasignatura {
   border-radius: 0 0 5px 5px;
   width: 100%;
-  display: block;
 }
 
 #logo {
@@ -66,15 +61,20 @@ article:last-child {
   background-color: white;
 }
 
-.description > ul {
+#underimage {
   padding: 1rem;
   padding-left: 3rem;
-  padding-bottom: auto;
   color: white;
+  height: 100%;
 }
-.description{
+.description {
   background-color: var(--mu-purple);
-  border-radius: 0 0 15px 15px;
+  color: var(--mu-gray);
+  margin: auto;
+  padding: auto;
+  border-radius: inherit;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
 
 footer {
@@ -83,9 +83,23 @@ footer {
 }
 footer > button {
   padding: 10px;
+  margin: 10px;
   display: block;
   width: 100%;
   border-radius: 10px;
+}
+.hidden {
+  display: none;
+}
+.selected > .description {
+  background-color: red;
+}
+a.articleselected {
+  background-color: red;
+}
+a.articlehidden {
+  background-color: #2c2a29;
+  color: red;
 }
 
 @media screen and (min-width: 600px) {
@@ -100,12 +114,13 @@ footer > button {
     clear: both;
     display: grid;
     grid-template-columns: 70% 30%;
-    grid-template-areas: 
-    "articles nav"
-    "footer footer";
+    grid-template-areas:
+      "articles nav"
+      "footer footer";
   }
-  article:first-child {
-    margin-top: 1rem;
+  .description {
+    flex-grow: 1;
+    width: 100%;
   }
   nav {
     grid-area: nav;
@@ -115,52 +130,44 @@ footer > button {
   }
   .container {
     grid-area: articles;
-    display: flex;
-    flex-direction: column;
+    padding: 0.5rem;
+    display: grid;
+    grid-template-columns: repeat(var(--numColumns), 1fr);
+    gap: 0.5rem;
   }
 
   article {
-    margin-left: 10px;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    background-color: var(--mu-gray);
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
   }
-  article:last-child {
-    margin-bottom: 25px;
-    border-radius: 0 0 15px 15px;
+  article:last-child{
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
   }
+  .description{
+    border-radius: inherit;
+  }
+
   footer {
     grid-area: footer;
   }
-  footer > button{
+  footer > button {
     float: left;
-    width: calc(100%/3 - 20px);
+    width: calc(100% / 3 - 20px);
     margin: 10px;
   }
 }
 @media screen and (min-width: 1024px) {
-  main {
-    grid-template-areas:
-      "articles nav"
-      "footer footer";
-  }
+ 
   .container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    flex-grow: 1;
-    
-  }
-  article  {
-    flex-grow: 1;
-    width: calc(100%/2 - 30px);
+    grid-template-columns: repeat(2, 1fr);
   }
 
-  footer {
-    grid-area: footer;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-shrink: 1;
-    width: 100%;
-  }
+  
 }
 @media screen and (min-width: 1280px) {
   main {
@@ -170,32 +177,22 @@ footer > button {
       "nav"
       "footer";
   }
-  .container{
-    grid-area: articles;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    
+  .container {
+    grid-template-columns: repeat(3, 1fr);
   }
-  article {
-    width: calc(100%/3 - 30px);
-    flex-grow: 1;
-  }
-  nav{
+
+  nav {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    flex-grow: 1;
   }
-  nav > a{
-    padding:30px;
-    display: block;
+  nav > a {
+    display: flex;
+    padding: 30px;
     width: 100%;
-    flex-grow: 1;
     margin: 10px;
   }
-  nav> a:first-child{
+  nav > a:first-child {
     margin-top: 10px;
   }
-
 }
